establish environment & add upload router
